objects/vlocity_cmt__ContractVersionDiscount__c.object
<CustomObject>
    <description>A contractual discount provided to a customer for future purchases within the contract time period.</description>
    <fields>
        <fullName>vlocity_cmt__AppliesToAllItems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies To All Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractVersionId__c</fullName>
        <label>Contract Document</label>
        <referenceTo>vlocity_cmt__ContractVersion__c</referenceTo>
        <relationshipLabel>Contract Document Discounts</relationshipLabel>
        <relationshipName>ContractVersionDiscounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DiscountTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount Template</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>ContractDocumentDiscounts</relationshipLabel>
        <relationshipName>ContractVersionDiscounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReferenceNumber__c</fullName>
        <externalId>true</externalId>
        <label>Reference Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Contract Document Discount</label>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractDocumentDiscounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>